--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .first-section {
     display: flex;
     background-image: url(images/top-banner.png);
@@ -41,4 +45,46 @@ h1 {
     color: azure;
     padding: 10px 40px;
     margin-top: 2px;
+}
+
+/* .time-color {
+    color: orangered;
+} */
+
+.exp-section {
+    margin-top: 10%;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left bottom;
+}
+
+.exp-area {
+    display: flex;
+}
+
+.exp-item {
+    width: 40%;
+    margin-left: 7%;
+    margin-right: 7%;
+    padding-left: 20px;
+    padding-bottom: 5%;
+    border-radius: 5px;
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+#red-border {
+    border-left: 5px solid orangered;
+}
+
+#blue-border {
+    border-left: 5px solid blue;
+}
+
+footer {
+    margin-top: 10%;
+}
+
+footer p {
+    text-align: center;
 }
